Project

General

Profile

Actions

Bug #13493

closed

usba: multiply-defined symbols

Added by Toomas Soome almost 3 years ago. Updated almost 3 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
driver - device drivers
Start date:
Due date:
% Done:

100%

Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
External Bug:

Description

Build errors with gcc 10:

    ld: fatal: symbol 'usb_cap' is multiply-defined:
            (file obj64/hcdi.o type=OBJT; file obj64/usba.o type=OBJT);
    ld: fatal: symbol 'usb_cap' is multiply-defined:
            (file obj64/hcdi.o type=OBJT; file obj64/usbai.o type=OBJT);
    ld: fatal: symbol 'usb_cap' is multiply-defined:
            (file obj64/hcdi.o type=OBJT; file obj64/hubdi.o type=OBJT);
    ld: fatal: symbol 'usb_cap' is multiply-defined:
            (file obj64/hcdi.o type=OBJT; file obj64/parser.o type=OBJT);
    ld: fatal: symbol 'usb_cap' is multiply-defined:
            (file obj64/hcdi.o type=OBJT; file obj64/genconsole.o type=OBJT);
    ld: fatal: symbol 'usb_cap' is multiply-defined:
            (file obj64/hcdi.o type=OBJT; file obj64/usbai_pipe_mgmt.o type=OBJT);
    ld: fatal: symbol 'usb_cap' is multiply-defined:
            (file obj64/hcdi.o type=OBJT; file obj64/usbai_req.o type=OBJT);
    ld: fatal: symbol 'usb_cap' is multiply-defined:
            (file obj64/hcdi.o type=OBJT; file obj64/usbai_util.o type=OBJT);
    ld: fatal: symbol 'usb_cap' is multiply-defined:
            (file obj64/hcdi.o type=OBJT; file obj64/usbai_register.o type=OBJT);
    ld: fatal: symbol 'usb_cap' is multiply-defined:
            (file obj64/hcdi.o type=OBJT; file obj64/usba_devdb.o type=OBJT);
    ld: fatal: symbol 'usb_cap' is multiply-defined:
            (file obj64/hcdi.o type=OBJT; file obj64/usba_bos.o type=OBJT);
    ld: fatal: file processing errors. No output written to obj64/usba
    *** Error code 1
    dmake: Fatal error: Command failed for target `obj64/usba'
    Current working directory /code/illumos-gate/usr/src/uts/intel/usba

Testing done: build/install/boot

Actions #1

Updated by Electric Monk almost 3 years ago

  • Gerrit CR set to 1207
Actions #2

Updated by Toomas Soome almost 3 years ago

  • Description updated (diff)
Actions #3

Updated by Electric Monk almost 3 years ago

  • Status changed from In Progress to Closed
  • % Done changed from 90 to 100

git commit 602e131c272200d35797cbad3554783e0c0fdb04

commit  602e131c272200d35797cbad3554783e0c0fdb04
Author: Toomas Soome <tsoome@me.com>
Date:   2021-02-03T20:56:26.000Z

    13493 usba: multiply-defined symbols
    Reviewed by: Robert Mustacchi <rm@fingolfin.org>
    Reviewed by: Andy Fiddaman <andy@omnios.org>
    Approved by: Dan McDonald <danmcd@joyent.com>

Actions

Also available in: Atom PDF